# software-renderer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CMake/: tga.cmake
dependencies/tga/: tga.cpp  tga.h
src/: gmath.h  main.cpp
